--- a/LP-S/Register.html
+++ b/LP-S/Register.html
@@ -64,9 +64,9 @@
         <br>
         <div id="terms">
             <input type="checkbox" value="terms" required id="registerTerms" />
-            <label for="registerTerms">I have read and accepted the Terms & Conditions</label>
+            <label for="registerTerms" id="registerT">I have read and accepted the Terms & Conditions</label>
         </div>
-        <button type="submit">Register</button>
+        <a class= "button" href="#popup1">Register</a>
     </form>
 
 </body>
