--- a/myads.html
+++ b/myads.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <title>LostPets</title>
+  <title>Announcements</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="myads.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link rel="icon" href="logo.jpg" style="width:5px;">
 </head>
 <body>
   <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Log out</a>
+  <a href="../home/Home2/html" class="active">Log out</a>
   <div class="dropdown">
-    <button class="dropbtn">@Georgiana
+    <button class="dropbtn">@Name
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">My ads</a>
-      <a href="#">Statitics</a>
+      <a href="../home/myads.html">My ads</a>
+      <a href="../home/statics.html">Statitics</a>
     </div>
   </div>
-  <a href="#about">Announcements</a>
+  <a href="../home/myads.html">Announcements</a>
   <a href="#" class="notification">
   <span></span>
   <span class="badge">3</span>
   </a>
   <form action="http://google.com" method="GET" >
     <label for="search"></label>
-    <input type="search" name="s" id="seach" placeholder="Search" maxlength="256">
+    <input type="search" name="s" id="search" placeholder="Search" maxlength="256">
   </form>
   <div class="content-wrap">
         <img src="logo.jpg" alt="logo" class="logo">
    </div>
-</div>
+  </div>
   <div id="ads">
     <div id="ads-descript">
       <h2 id="title">My ads</h2>
