--- a/statics.html
+++ b/statics.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <title>LostPets</title>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="statics.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <title>Statitics</title>
+  <link rel="icon" href="logo.jpg" style="width:5px;">
 </head>
-<body>
-  <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Log out</a>
-  <div class="dropdown">
-    <button class="dropbtn">@Georgiana
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="#">My ads</a>
-      <a href="#">Statitics</a>
-    </div>
+<div class="topnav" id="myTopnav">
+<a href="../home/Home2/html" class="active">Log out</a>
+<div class="dropdown">
+  <button class="dropbtn">@Name
+    <i class="fa fa-caret-down"></i>
+  </button>
+  <div class="dropdown-content">
+    <a href="../home/myads.html">My ads</a>
+    <a href="../home/statics.html">Statitics</a>
   </div>
-  <a href="#about">Announcements</a>
-  <a href="#" class="notification">
-  <span></span>
-  <span class="badge">3</span>
-  </a>
-  <form action="http://google.com" method="GET" >
-    <label for="cheese"></label>
-    <input type="search" name="q" id="cheese" placeholder="Search" maxlength="256">
-	</form>
-  <div class="content-wrap">
-        <img src="logo.jpg" alt="logo" class="logo">
-   </div>
-
+</div>
+<a href="../home/myads.html">Announcements</a>
+<a href="#" class="notification">
+<span></span>
+<span class="badge">3</span>
+</a>
+<form action="http://google.com" method="GET" >
+  <label for="search"></label>
+  <input type="search" name="s" id="search" placeholder="Search" maxlength="256">
+</form>
+<div class="content-wrap">
+      <img src="logo.jpg" alt="logo" class="logo">
+ </div>
+</div>
 </div>
   <div id="stt">
     <div id="ads-descript">
-      <h2 id="title">Statitics</h2>
+      <h2 id="title">Statitistics</h2>
       <p class="description">Depending on the information we receive daily from you, you can see a detailed statistic from the last month. </p>
 
     </div>
-    <div id="statitics">
+    <ul id="statitics">
       <li class="stat">
           <div class="list-name">
             <h4>Cases of lost animals</h4>
@@ -92,6 +93,7 @@
             <button type="submit" name="html">HTML</button>
           </div>
       </li>
-    </div>
+    </ul>
+  </div>
   </body>
   </html>
