--- a/LP-S/Home2.html
+++ b/LP-S/Home2.html
@@ -19,12 +19,13 @@
         </header>
         
         <div class="slider-wrap">
-            <p>Hello! We are here to make sure that your live as well as your pet one's is easier when you are away from each other. 
+            <p><strong>Hello! We are here to make sure that your live as well as your pet one's is easier when you are away from each other. 
                 <br>
                 We're sure that you want to help also others like you, who have a buddy at home, to find them when they're lost. 
                  <br>
                 So let's not waste any more time and come to our community and let's find your buddy or, why not, find another one that is lost.
                 <br>
+            </strong>
             </p>
             <div class="buttons">
                 <a class="btn btn-full" href="Login.html">Log In</a>
