--- a/LP-S/Login.html
+++ b/LP-S/Login.html
@@ -35,8 +35,8 @@
                     <h4>You allow us to have acces to your location?</h4>
                     <a id="close" href="#">&times;</a>
                     <div class="contentPU">
-                        <button id="cancel">Cancel</button>
-                        <button id="allow">Allow</button>
+                        <a href="myadds.html" class="button" id="cancel">Cancel</a>
+                        <a href="myadds.html" class="button" id="allow">Allow</a>
                     </div>
                 </div>
             </div>
