--- a/LP-S/Register.html
+++ b/LP-S/Register.html
@@ -66,8 +66,18 @@
             <input type="checkbox" value="terms" required id="registerTerms" />
             <label for="registerTerms" id="registerT">I have read and accepted the Terms & Conditions</label>
         </div>
-        <a class= "button" href="#popup1">Register</a>
+        <a class= "buttonR" href="#popup1">Register</a>
     </form>
+    <div id="popup1" class="overlay">
+        <div class="popup">
+            <h4>You allow us to have acces to your location?</h4>
+            <a id="close" href="#">&times;</a>
+            <div class="contentPU">
+                <a href="myadds.html" class="button" id="cancel">Cancel</a>
+                <a href="myadds.html" class="button" id="allow">Allow</a>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
