--- a/LP-S/Formular.html
+++ b/LP-S/Formular.html
@@ -13,12 +13,12 @@
                 <nav class="topnav">
                         <a href="Home2.html" class="active">Log out</a>
                         <div class="dropdown">
-                            <button class="dropbtn">@Smarandita
+                            <button class="dropbtn">@Name
                                 <i class="down"></i>
                             </button>
                             <div class="dropdown-content">
-                                <a href="#">My ads</a>
-                                <a href="#">Statitics</a>
+                                <a href="myadds.html">My ads</a>
+                                <a href="statistic.html">Statitics</a>
                             </div>
                         </div>
                         <a href="#about">Announcements</a>
