fixed the header

--- a/myads.html
+++ b/myads.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="myads.css"/>
+  <link rel="stylesheet" type="text/css" href="announces.css"/>
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="icon" href="logo.jpg" style="width:5px;">
 </head>
@@ -26,7 +26,7 @@
   <span></span>
   <span class="badge">3</span>
   </a>
-  <form action="http://google.com" method="GET" >
+  <form action="http://google.com" method="GET" id="searchx">
     <label for="search"></label>
     <input type="search" name="s" id="search" placeholder="Search" maxlength="256">
   </form>
