--- a/Front/statistics/statistics.html
+++ b/Front/statistics/statistics.html
@@ -91,9 +91,9 @@
           <p></p>
         </div>
         <div class="types">
-          <button type="submit" name="pdf">PDF</button>
-          <button type="submit" name="csv">CSV</button>
-          <button type="submit" name="html">HTML</button>
+          <button type="submit" name="pdf" value="pdf">PDF</button>
+          <button type="submit" name="csv" value="csv">CSV</button>
+          <button type="submit" name="html" value="html">HTML</button>
         </div>
       </li>
     </ul>
