made  header responsive for logged user + save the image from the added ad

--- a/Front/ads-module/add/add.html
+++ b/Front/ads-module/add/add.html
@@ -52,7 +52,7 @@
     <div>
       <label for="file">Choose a photo of your buddy:</label>
       <br>
-      <input type="file" name="file" id="file" name="formPImage[]"/>
+      <input type="file" id="file" name="formPImage[]"/>
     </div>
     <br>
     <div>
@@ -116,7 +116,7 @@
     <div>
       <label for="moreDetails">More Details:</label>
       <br>
-      <input type="text" required id="moreDetails" name="moreDetails"/>
+      <input type="text" id="moreDetails" name="moreDetails"/>
     </div>
     <br>
     <div>
