added notification feature

--- a/Front/ads-module/ad/ad.html
+++ b/Front/ads-module/ad/ad.html
@@ -14,19 +14,24 @@
    <div class="topnav" id="myTopnav">
      <a href="../../home/home.html" class="active">Log out</a>
      <div class="dropdown">
-       <button class="dropbtn">@Name
-         <i class="fa fa-caret-down"></i>
-       </button>
+       <button class="dropbtn">@Name</button>
        <div class="dropdown-content">
          <a href="../page/page.html">My ads</a>
          <a href="../../statistics/statistics.html">Statistics</a>
        </div>
      </div>
      <a href="../page/page.html">Announcements</a>
-     <a href="#" class="notification">
-       <span></span>
-       <span class="badge">3</span>
-     </a>
+     <div class="dropdown-notification">
+      <button class="notification">
+            <span></span>
+            <span class="badge">3</span>
+       </button>
+      <div class="dropdown-content-notification">
+          <a href="#">A new lost pet is near your area!</a>
+          <a href="#">John Mayer has just seen your pet recently.</a>
+          <a href="#">Maria Petrei has just seen your pet recently.</a>
+      </div>
+    </div>
      <form action="http://google.com" method="GET">
        <label for="search"></label>
        <input type="search" name="s" id="search" placeholder="Search" maxlength="256">
