modified edit page

--- a/Front/ads-module/edit/edit.html
+++ b/Front/ads-module/edit/edit.html
@@ -23,10 +23,17 @@
       </div>
     </div>
     <a href="../page/page.html">Announcements</a>
-    <a href="#" class="notification">
-      <span></span>
-      <span class="badge">3</span>
-    </a>
+    <div class="dropdown-notification">
+      <button class="notification">
+            <span></span>
+            <span class="badge">3</span>
+       </button>
+      <div class="dropdown-content-notification">
+          <a href="#">A new lost pet is near your area!</a>
+          <a href="#">John Mayer has just seen your pet recently.</a>
+          <a href="#">Maria Petrei has just seen your pet recently.</a>
+      </div>
+    </div>
     <form action="http://google.com" method="GET">
       <label for="search"></label>
       <input type="search" name="s" id="search" placeholder="Search" maxlength="256">
