--- a/Front/home/home.html
+++ b/Front/home/home.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="home.css" />
+  <link rel="stylesheet" type="text/css" href="Front/home/home.css" />
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
@@ -14,7 +14,7 @@
   <header class="header-wrap">
     <nav class="topnav">
       <div class="content-wrap">
-        <img src="../images/logo.jpg" alt="logo" class="logo">
+        <img src="Front/images/logo.jpg" alt="logo" class="logo">
       </div>
     </nav>
   </header>
@@ -31,8 +31,8 @@
       </strong>
     </p>
     <div class="buttons">
-      <a class="btn btn-full" href="../login/login.html">Log In</a>
-      <a class="btn btn-ghost" href="../register/register.html">Register</a>
+      <a class="btn btn-full" href="login.php">Log In</a>
+      <a class="btn btn-ghost" href="register.php">Register</a>
     </div>
   </div>
 </body>
