--- a/Front/login/login.html
+++ b/Front/login/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="login.css" />
+  <link rel="stylesheet" type="text/css" href="/Front/login/login.css" />
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <title>Log In</title>
 </head>
@@ -13,10 +13,10 @@
 <body>
   <div class="topnav" id="myTopnav">
     <div class="content-wrap">
-      <img src="../images/logo.jpg" alt="logo" class="logo">
+      <img src="Front/images/logo.jpg" alt="logo" class="logo">
     </div>
   </div>
-  <form id="log-in-wrap" action="../../Back/login.php" method="POST">
+  <form id="log-in-wrap" action="Back/login.php" method="POST">
     <div>
       <label for="loginEmail">E-mail*:</label>
       <br>
