--- a/Front/register/register.html
+++ b/Front/register/register.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="register.css" />
+  <link rel="stylesheet" type="text/css" href="Front/register/register.css" />
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <title>Register</title>
 </head>
@@ -13,7 +13,7 @@
 <body>
   <div class="topnav" id="myTopnav">
     <div class="content-wrap">
-      <img src="../images/logo.jpg" alt="logo" class="logo">
+      <img src="Front/images/logo.jpg" alt="logo" class="logo">
     </div>
   </div>
   <form id="register-wrap" action="../../Back/register.php" method="POST">
