Deleted pop-up from login and register, added map with pin that cam be modified

--- a/Front/login/login.html
+++ b/Front/login/login.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="/Front/login/login.css" />
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <title>Log In</title>
+  <link rel="icon" href="../images/logo.jpg" style="width:5px;">
 </head>
 
 <body>
@@ -30,16 +31,6 @@
     </div>
     <button class="btn btn-ghost" type="submit" value="login">Log In</button>
   </form>
-<!--  <div id="popup1" class="overlay">-->
-<!--    <div class="popup">-->
-<!--      <h4>You allow us to have access to your location?</h4>-->
-<!--      <a id="close" href="#">&times;</a>-->
-<!--      <div class="contentPU">-->
-<!--        <a href="../ads-module/page/page.html" class="button" id="cancel">Cancel</a>-->
-<!--        <a href="../ads-module/page/page.html" class="button" id="allow">Allow</a>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
 </body>
 
 </html>
