--- a/Front/register/register.html
+++ b/Front/register/register.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="Front/register/register.css" />
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <title>Register</title>
+  <link rel="icon" href="../images/logo.jpg" style="width:5px;">
 </head>
 
 <body>
@@ -70,16 +71,6 @@
 
     <p>Already a user <a href="../login/login.html">Log in</a></p>
   </form>
-<!--  <div id="popup1" class="overlay">-->
-<!--    <div class="popup">-->
-<!--      <h4>You allow us to have access to your location?</h4>-->
-<!--      <a id="close" href="#">&times;</a>-->
-<!--      <div class="contentPU">-->
-<!--        <a href="../ads-module/page/page.html" class="button" id="cancel">Cancel</a>-->
-<!--        <a href="../ads-module/page/page.html" class="button" id="allow">Allow</a>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
 </body>
 
 </html>
