fixed date dissapear and last seen. add exception for image

--- a/Front/register/register.html
+++ b/Front/register/register.html
@@ -69,7 +69,7 @@
     </div>
     <button type="submit" value="register" class="buttonR">Register</button>
 
-    <p>Already a user <a href="../login/login.html">Log in</a></p>
+    <p>Already a user <a href="../login.html">Log in</a></p>
   </form>
 </body>
 
